# libconsensusservice

./: .gitignore  CMakeLists.txt  SharemindLibConsensusServiceConfig.cmake.in  SharemindLibConsensusServiceConfigVersion.cmake.in
src/: libconsensusservice.h
